--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,4 +1,11 @@
-set-option -sa terminal-overrides ",xterm*:Tc"
+# set -g default-terminal "tmux-256color"
+# set -ga terminal-overrides ",*256col*:Tc"
+# set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
+# set-environment -g COLORTERM "truecolor"
+set -g default-terminal "alacritty"
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # colored underscores
+set -as terminal-overrides ',alacritty:RGB' # true-color support
+
 set -g mouse on
 
 set -g base-index 1
