--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,13 +1,13 @@
-set -g default-terminal "alacritty"
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # colored underscores
 set -as terminal-overrides ',alacritty:RGB' # true-color support
 
 set -g mouse on
-
 set -g base-index 1
 set -g pane-base-index 1
-set-window-option -g pane-base-index 1
+set -gq allow-passthrough on
+set -g visual-activity off
 set-option -g renumber-windows on
+set-window-option -g pane-base-index 1
 
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
