--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,37 +1,31 @@
-set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # colored underscores
-set -as terminal-overrides ',alacritty:RGB' # true-color support
-
-set -g mouse on
-set -g base-index 1
-set -g pane-base-index 1
-set -gq allow-passthrough on
-set -g visual-activity off
-set-option -g renumber-windows on
-set-window-option -g pane-base-index 1
-
-set-window-option -g mode-keys vi
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
-bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+unbind C-b
+set -g prefix M-Space
+bind M-Space send-prefix
+bind R source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 bind -r h select-pane -L
 bind -r j select-pane -D
 bind -r k select-pane -U
 bind -r l select-pane -R
 
-bind '"' split-window -v -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
-bind c new-window -c "#{pane_current_path}"
-
-set -g @tokyo-night-tmux_show_datetime 0
-set -g @tokyo-night-tmux_show_path 1
-set -g @tokyo-night-tmux_path_format relative
-set -g @tokyo-night-tmux_window_id_style dsquare
-set -g @tokyo-night-tmux_window_id_style dsquare
-set -g @tokyo-night-tmux_show_git 0
-
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin "janoamaral/tokyo-night-tmux"
-
-run '~/.tmux/plugins/tpm/tpm'
+set -g mouse on
+set -g base-index 1
+set -g pane-base-index 1
+setw -g pane-base-index 1
+set -g history-limit 50000
+set -g display-time 4000
+set -g status-interval 5
+set -g default-terminal "screen-256color"
+set -g visual-activity off
+set -g pane-border-style "fg=black"
+set -g pane-active-border-style "fg=gold"
+set -g pane-border-status off
+set -g renumber-windows on
+set -g status-style "bg=black,fg=gold"
+set -g status-left "#[bold] #{?client_prefix,󰠠 ,#[dim]󰤂 }#[bold,nodim]"
+set -g window-status-current-format "#[fg=white] #{?#{==:#{pane_current_command},ssh},󰣀 , }#[bold,nodim]#W#[nobold]#{?window_zoomed_flag}#{?window_last_flag, , }"
+set -g window-status-format " #{?#{==:#{pane_current_command},ssh},󰣀 , }#W#[nobold,dim]#{?window_zoomed_flag}#[fg=gray}]#{?window_last_flag,󰁯  , }"
+set -g status-right "░   #{pane_current_path} "
+set -sg escape-time 10
