--- a/.config/helix/languages.toml
+++ b/.config/helix/languages.toml
@@ -1,23 +1,40 @@
+[language-server.pyright.config.python.analysis]
+typeCheckingMode = "basic"
+diagnosticMode = "workspace"
+
+[language-server.rust-analyzer]
+command = "rust-analyzer"
+
+[language-server.rust-analyzer.config.check]
+command = "clippy"
+
+[language-server.rust-analyzer.config.cargo]
+features = "all"
+
+[language-server.ruff]
+command = "ruff"
+args = ["server"]
+
+[language-server.emmet-ls]
+command = "emmet-ls"
+args = [ "--stdio" ]
+
+
 [[language]]
 name = "python"
 auto-format = true
 indent = { tab-width = 4, unit = "    " }
 language-servers = [ "pyright", "ruff" ]
 
-[language-server.pyright.config.python.analysis]
-typeCheckingMode = "basic"
-diagnosticMode = "workspace"
-
-[language-server.ruff]
-command = "ruff"
-args = ["server"]
-
+[[language]]
+name = "rust"
+auto-format = true
+formatter = { command = "cargo fmt" }
 
 [[language]]
 name = "c"
 indent = { tab-width = 4, unit = "    " }
 language-servers = [ "clangd" ]
-
 
 [[language]]
 name = "typescript"
@@ -27,7 +44,7 @@ auto-format = true
 
 [[language]]
 name = "tsx"
-language-servers = [ "typescript-language-server", "vscode-eslint-language-server", "emmet-ls" ]
+language-servers = [ "typescript-language-server", "vscode-eslint-language-server", "emmet-ls", "tailwindcss-ls" ]
 formatter = { command = "prettier", args = [ "--parser", "typescript" ] }
 auto-format = true
 
@@ -39,7 +56,7 @@ auto-format = true
 
 [[language]]
 name = "jsx"
-language-servers = [ "typescript-language-server", "vscode-eslint-language-server", "emmet-ls" ]
+language-servers = [ "typescript-language-server", "vscode-eslint-language-server", "emmet-ls", "tailwindcss-ls" ]
 formatter = { command = "prettier", args = [ "--parser", "typescript" ] }
 auto-format = true
 
@@ -50,45 +67,12 @@ auto-format = true
 
 [[language]]
 name = "html"
-language-servers = [ "vscode-html-language-server", "emmet-ls" ]
+language-servers = [ "vscode-html-language-server", "emmet-ls", "tailwindcss-ls" ]
 formatter = { command = 'prettier', args = ["--parser", "html"] }
 auto-format = true
 
 [[language]]
 name = "css"
-language-servers = [ "vscode-css-language-server", "emmet-ls" ]
+language-servers = [ "vscode-css-language-server", "emmet-ls", "tailwindcss-ls" ]
 formatter = { command = 'prettier', args = ["--parser", "css"] }
 auto-format = true
-
-[language-server.emmet-ls]
-command = "emmet-ls"
-args = [ "--stdio" ]
-
-[language-server.vscode-eslint-language-server]
-command = "vscode-vscode-eslint-language-server-language-server"
-args = ["--stdio"]
-
-[language-server.vscode-eslint-language-server.config]
-codeActionsOnSave = { mode = "all", "source.fixAll.vscode-eslint-language-server" = true }
-format = { enable = true }
-nodePath = ""
-quiet = false
-rulesCustomizations = []
-run = "onType"
-validate = "on"
-experimental = {}
-problems = { shortenToSingleLine = false }
-
-[language-server.vscode-eslint-language-server.config.codeAction]
-disableRuleComment = { enable = true, location = "separateLine" }
-showDocumentation = { enable = false }
-
-[language-server.vscode-json-language-server.config]
-json = { validate = { enable = true }, format = { enable = true } }
-provideFormatter = true
-
-[language-server.vscode-css-language-server.config]
-css = { validate = { enable = true } }
-scss = { validate = { enable = true } }
-less = { validate = { enable = true } }
-provideFormatter = true
